--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@ var data = {
   "order_id": 'order_Mf0APBSHR6aq2W',
   // "customer_id": 'cust_MLuYG6woWRlQ1W',
   // "recurring": '1',
-  "method": 'upi'
+  "method": 'upi',
+    "_[flow]":'intent'
 };
 
 
